[package]
name = "atcoder-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = "0.4.5"
itertools = "0.13.0"
superslice = "1.0.0"
num-integer = "0.1.44"

[[bin]]
name = "template"
path = "./template.rs"

# [[bin]]
# name = "cheetsheet"
# path = "./cheetsheet.rs"

# AtCoder Heuristics Contest
[[bin]]
name = "ahc_introduction_a"
path = "./src/ahc/introduction/a.rs"

# AtCoder Beginner Contest

[[bin]]
name = "abc427_a"
path = "./src/abc/427/a.rs"

[[bin]]
name = "abc427_b"
path = "./src/abc/427/b.rs"

[[bin]]
name = "abc427_c"
path = "./src/abc/427/c.rs"

[[bin]]
name = "abc427_d"
path = "./src/abc/427/d.rs"

[[bin]]
name = "abc427_e"
path = "./src/abc/427/e.rs"

[[bin]]
name = "abc427_f"
path = "./src/abc/427/f.rs"

[[bin]]
name = "abc427_g"
path = "./src/abc/427/g.rs"

[[bin]]
name = "abc428_a"
path = "./src/abc/428/a.rs"

[[bin]]
name = "abc428_b"
path = "./src/abc/428/b.rs"

[[bin]]
name = "abc428_c"
path = "./src/abc/428/c.rs"

[[bin]]
name = "abc428_d"
path = "./src/abc/428/d.rs"

[[bin]]
name = "abc428_e"
path = "./src/abc/428/e.rs"

[[bin]]
name = "abc428_f"
path = "./src/abc/428/f.rs"

[[bin]]
name = "abc428_g"
path = "./src/abc/428/g.rs"

[[bin]]
name = "abc426_a"
path = "./src/abc/426/a.rs"

[[bin]]
name = "abc426_b"
path = "./src/abc/426/b.rs"

[[bin]]
name = "abc426_c"
path = "./src/abc/426/c.rs"

[[bin]]
name = "abc426_d"
path = "./src/abc/426/d.rs"

[[bin]]
name = "abc426_e"
path = "./src/abc/426/e.rs"

[[bin]]
name = "abc426_f"
path = "./src/abc/426/f.rs"

[[bin]]
name = "abc426_g"
path = "./src/abc/426/g.rs"

[[bin]]
name = "abc425_a"
path = "./src/abc/425/a.rs"

[[bin]]
name = "abc425_b"
path = "./src/abc/425/b.rs"

[[bin]]
name = "abc425_c"
path = "./src/abc/425/c.rs"

[[bin]]
name = "abc425_d"
path = "./src/abc/425/d.rs"

[[bin]]
name = "abc425_e"
path = "./src/abc/425/e.rs"

[[bin]]
name = "abc425_f"
path = "./src/abc/425/f.rs"

[[bin]]
name = "abc425_g"
path = "./src/abc/425/g.rs"

[[bin]]
name = "abc433_a"
path = "./src/abc/433/a.rs"

[[bin]]
name = "abc433_b"
path = "./src/abc/433/b.rs"

[[bin]]
name = "abc433_c"
path = "./src/abc/433/c.rs"

[[bin]]
name = "abc433_d"
path = "./src/abc/433/d.rs"

[[bin]]
name = "abc433_e"
path = "./src/abc/433/e.rs"

[[bin]]
name = "abc433_f"
path = "./src/abc/433/f.rs"

[[bin]]
name = "abc433_g"
path = "./src/abc/433/g.rs"

[[bin]]
name = "abc434_a"
path = "./src/abc/434/a.rs"

[[bin]]
name = "abc434_b"
path = "./src/abc/434/b.rs"

[[bin]]
name = "abc434_c"
path = "./src/abc/434/c.rs"

[[bin]]
name = "abc434_d"
path = "./src/abc/434/d.rs"

[[bin]]
name = "abc434_e"
path = "./src/abc/434/e.rs"

[[bin]]
name = "abc434_f"
path = "./src/abc/434/f.rs"

[[bin]]
name = "abc434_g"
path = "./src/abc/434/g.rs"

[[bin]]
name = "abc420_a"
path = "./src/abc/420/a.rs"

[[bin]]
name = "abc420_b"
path = "./src/abc/420/b.rs"

[[bin]]
name = "abc420_c"
path = "./src/abc/420/c.rs"

[[bin]]
name = "abc420_d"
path = "./src/abc/420/d.rs"

[[bin]]
name = "abc420_e"
path = "./src/abc/420/e.rs"

[[bin]]
name = "abc420_f"
path = "./src/abc/420/f.rs"

[[bin]]
name = "abc420_g"
path = "./src/abc/420/g.rs"

[[bin]]
name = "abc421_a"
path = "./src/abc/421/a.rs"

[[bin]]
name = "abc421_b"
path = "./src/abc/421/b.rs"

[[bin]]
name = "abc421_c"
path = "./src/abc/421/c.rs"

[[bin]]
name = "abc421_d"
path = "./src/abc/421/d.rs"

[[bin]]
name = "abc421_e"
path = "./src/abc/421/e.rs"

[[bin]]
name = "abc421_f"
path = "./src/abc/421/f.rs"

[[bin]]
name = "abc421_g"
path = "./src/abc/421/g.rs"

[[bin]]
name = "abc429_a"
path = "./src/abc/429/a.rs"

[[bin]]
name = "abc429_b"
path = "./src/abc/429/b.rs"

[[bin]]
name = "abc429_c"
path = "./src/abc/429/c.rs"

[[bin]]
name = "abc429_d"
path = "./src/abc/429/d.rs"

[[bin]]
name = "abc429_e"
path = "./src/abc/429/e.rs"

[[bin]]
name = "abc429_f"
path = "./src/abc/429/f.rs"

[[bin]]
name = "abc429_g"
path = "./src/abc/429/g.rs"

[[bin]]
name = "abc419_a"
path = "./src/abc/419/a.rs"

[[bin]]
name = "abc419_b"
path = "./src/abc/419/b.rs"

[[bin]]
name = "abc419_c"
path = "./src/abc/419/c.rs"

[[bin]]
name = "abc419_d"
path = "./src/abc/419/d.rs"

[[bin]]
name = "abc419_e"
path = "./src/abc/419/e.rs"

[[bin]]
name = "abc419_f"
path = "./src/abc/419/f.rs"

[[bin]]
name = "abc419_g"
path = "./src/abc/419/g.rs"

[[bin]]
name = "abc418_a"
path = "./src/abc/418/a.rs"

[[bin]]
name = "abc418_b"
path = "./src/abc/418/b.rs"

[[bin]]
name = "abc418_c"
path = "./src/abc/418/c.rs"

[[bin]]
name = "abc418_d"
path = "./src/abc/418/d.rs"

[[bin]]
name = "abc418_e"
path = "./src/abc/418/e.rs"

[[bin]]
name = "abc418_f"
path = "./src/abc/418/f.rs"

[[bin]]
name = "abc418_g"
path = "./src/abc/418/g.rs"

[[bin]]
name = "abc417_a"
path = "./src/abc/417/a.rs"

[[bin]]
name = "abc417_b"
path = "./src/abc/417/b.rs"

[[bin]]
name = "abc417_c"
path = "./src/abc/417/c.rs"

[[bin]]
name = "abc417_d"
path = "./src/abc/417/d.rs"

[[bin]]
name = "abc417_e"
path = "./src/abc/417/e.rs"

[[bin]]
name = "abc417_f"
path = "./src/abc/417/f.rs"

[[bin]]
name = "abc417_g"
path = "./src/abc/417/g.rs"

[[bin]]
name = "abc416_a"
path = "./src/abc/416/a.rs"

[[bin]]
name = "abc416_b"
path = "./src/abc/416/b.rs"

[[bin]]
name = "abc416_c"
path = "./src/abc/416/c.rs"

[[bin]]
name = "abc416_d"
path = "./src/abc/416/d.rs"

[[bin]]
name = "abc416_e"
path = "./src/abc/416/e.rs"

[[bin]]
name = "abc416_f"
path = "./src/abc/416/f.rs"

[[bin]]
name = "abc416_g"
path = "./src/abc/416/g.rs"

[[bin]]
name = "abc220_a"
path = "./src/abc/220/a.rs"

[[bin]]
name = "abc220_b"
path = "./src/abc/220/b.rs"

[[bin]]
name = "abc220_c"
path = "./src/abc/220/c.rs"

[[bin]]
name = "abc220_d"
path = "./src/abc/220/d.rs"

[[bin]]
name = "abc220_e"
path = "./src/abc/220/e.rs"

[[bin]]
name = "abc220_f"
path = "./src/abc/220/f.rs"

[[bin]]
name = "abc220_g"
path = "./src/abc/220/g.rs"

[[bin]]
name = "abc435_a"
path = "./src/abc/435/a.rs"

[[bin]]
name = "abc435_b"
path = "./src/abc/435/b.rs"

[[bin]]
name = "abc435_c"
path = "./src/abc/435/c.rs"

[[bin]]
name = "abc435_d"
path = "./src/abc/435/d.rs"

[[bin]]
name = "abc435_e"
path = "./src/abc/435/e.rs"

[[bin]]
name = "abc435_f"
path = "./src/abc/435/f.rs"

[[bin]]
name = "abc435_g"
path = "./src/abc/435/g.rs"

[[bin]]
name = "abc415_a"
path = "./src/abc/415/a.rs"

[[bin]]
name = "abc415_b"
path = "./src/abc/415/b.rs"

[[bin]]
name = "abc415_c"
path = "./src/abc/415/c.rs"

[[bin]]
name = "abc415_d"
path = "./src/abc/415/d.rs"

[[bin]]
name = "abc415_e"
path = "./src/abc/415/e.rs"

[[bin]]
name = "abc415_f"
path = "./src/abc/415/f.rs"

[[bin]]
name = "abc415_g"
path = "./src/abc/415/g.rs"

[[bin]]
name = "abc414_a"
path = "./src/abc/414/a.rs"

[[bin]]
name = "abc414_b"
path = "./src/abc/414/b.rs"

[[bin]]
name = "abc414_c"
path = "./src/abc/414/c.rs"

[[bin]]
name = "abc414_d"
path = "./src/abc/414/d.rs"

[[bin]]
name = "abc414_e"
path = "./src/abc/414/e.rs"

[[bin]]
name = "abc414_f"
path = "./src/abc/414/f.rs"

[[bin]]
name = "abc414_g"
path = "./src/abc/414/g.rs"

[[bin]]
name = "abc413_a"
path = "./src/abc/413/a.rs"

[[bin]]
name = "abc413_b"
path = "./src/abc/413/b.rs"

[[bin]]
name = "abc413_c"
path = "./src/abc/413/c.rs"

[[bin]]
name = "abc413_d"
path = "./src/abc/413/d.rs"

[[bin]]
name = "abc413_e"
path = "./src/abc/413/e.rs"

[[bin]]
name = "abc413_f"
path = "./src/abc/413/f.rs"

[[bin]]
name = "abc413_g"
path = "./src/abc/413/g.rs"

[[bin]]
name = "abc412_a"
path = "./src/abc/412/a.rs"

[[bin]]
name = "abc412_b"
path = "./src/abc/412/b.rs"

[[bin]]
name = "abc412_c"
path = "./src/abc/412/c.rs"

[[bin]]
name = "abc412_d"
path = "./src/abc/412/d.rs"

[[bin]]
name = "abc412_e"
path = "./src/abc/412/e.rs"

[[bin]]
name = "abc412_f"
path = "./src/abc/412/f.rs"

[[bin]]
name = "abc412_g"
path = "./src/abc/412/g.rs"

[[bin]]
name = "abc436_a"
path = "./src/abc/436/a.rs"

[[bin]]
name = "abc436_b"
path = "./src/abc/436/b.rs"

[[bin]]
name = "abc436_c"
path = "./src/abc/436/c.rs"

[[bin]]
name = "abc436_d"
path = "./src/abc/436/d.rs"

[[bin]]
name = "abc436_e"
path = "./src/abc/436/e.rs"

[[bin]]
name = "abc436_f"
path = "./src/abc/436/f.rs"

[[bin]]
name = "abc436_g"
path = "./src/abc/436/g.rs"

[[bin]]
name = "arc200_a"
path = "./src/arc/200/a.rs"

[[bin]]
name = "arc200_b"
path = "./src/arc/200/b.rs"

[[bin]]
name = "arc200_c"
path = "./src/arc/200/c.rs"

[[bin]]
name = "arc200_d"
path = "./src/arc/200/d.rs"

[[bin]]
name = "arc200_e"
path = "./src/arc/200/e.rs"

[[bin]]
name = "arc200_f"
path = "./src/arc/200/f.rs"

[[bin]]
name = "arc200_g"
path = "./src/arc/200/g.rs"
[[bin]]
name = "abc411_a"
path = "./src/abc/411/a.rs"

[[bin]]
name = "abc411_b"
path = "./src/abc/411/b.rs"

[[bin]]
name = "abc411_c"
path = "./src/abc/411/c.rs"

[[bin]]
name = "abc411_d"
path = "./src/abc/411/d.rs"

[[bin]]
name = "abc411_e"
path = "./src/abc/411/e.rs"

[[bin]]
name = "abc411_f"
path = "./src/abc/411/f.rs"

[[bin]]
name = "abc411_g"
path = "./src/abc/411/g.rs"

[[bin]]
name = "abc410_a"
path = "./src/abc/410/a.rs"

[[bin]]
name = "abc410_b"
path = "./src/abc/410/b.rs"

[[bin]]
name = "abc410_c"
path = "./src/abc/410/c.rs"

[[bin]]
name = "abc410_d"
path = "./src/abc/410/d.rs"

[[bin]]
name = "abc410_e"
path = "./src/abc/410/e.rs"

[[bin]]
name = "abc410_f"
path = "./src/abc/410/f.rs"

[[bin]]
name = "abc410_g"
path = "./src/abc/410/g.rs"

[[bin]]
name = "abc409_a"
path = "./src/abc/409/a.rs"

[[bin]]
name = "abc409_b"
path = "./src/abc/409/b.rs"

[[bin]]
name = "abc409_c"
path = "./src/abc/409/c.rs"

[[bin]]
name = "abc409_d"
path = "./src/abc/409/d.rs"

[[bin]]
name = "abc409_e"
path = "./src/abc/409/e.rs"

[[bin]]
name = "abc409_f"
path = "./src/abc/409/f.rs"

[[bin]]
name = "abc409_g"
path = "./src/abc/409/g.rs"

[[bin]]
name = "ab408_a"
path = "./src/ab/408/a.rs"

[[bin]]
name = "ab408_b"
path = "./src/ab/408/b.rs"

[[bin]]
name = "ab408_c"
path = "./src/ab/408/c.rs"

[[bin]]
name = "ab408_d"
path = "./src/ab/408/d.rs"

[[bin]]
name = "ab408_e"
path = "./src/ab/408/e.rs"

[[bin]]
name = "ab408_f"
path = "./src/ab/408/f.rs"

[[bin]]
name = "ab408_g"
path = "./src/ab/408/g.rs"

[[bin]]
name = "abc408_a"
path = "./src/abc/408/a.rs"

[[bin]]
name = "abc408_b"
path = "./src/abc/408/b.rs"

[[bin]]
name = "abc408_c"
path = "./src/abc/408/c.rs"

[[bin]]
name = "abc408_d"
path = "./src/abc/408/d.rs"

[[bin]]
name = "abc408_e"
path = "./src/abc/408/e.rs"

[[bin]]
name = "abc408_f"
path = "./src/abc/408/f.rs"

[[bin]]
name = "abc408_g"
path = "./src/abc/408/g.rs"

[[bin]]
name = "abc424_a"
path = "./src/abc/424/a.rs"

[[bin]]
name = "abc424_b"
path = "./src/abc/424/b.rs"

[[bin]]
name = "abc424_c"
path = "./src/abc/424/c.rs"

[[bin]]
name = "abc424_d"
path = "./src/abc/424/d.rs"

[[bin]]
name = "abc424_e"
path = "./src/abc/424/e.rs"

[[bin]]
name = "abc424_f"
path = "./src/abc/424/f.rs"

[[bin]]
name = "abc424_g"
path = "./src/abc/424/g.rs"

[[bin]]
name = "abc407_a"
path = "./src/abc/407/a.rs"

[[bin]]
name = "abc407_b"
path = "./src/abc/407/b.rs"

[[bin]]
name = "abc407_c"
path = "./src/abc/407/c.rs"

[[bin]]
name = "abc407_d"
path = "./src/abc/407/d.rs"

[[bin]]
name = "abc407_e"
path = "./src/abc/407/e.rs"

[[bin]]
name = "abc407_f"
path = "./src/abc/407/f.rs"

[[bin]]
name = "abc407_g"
path = "./src/abc/407/g.rs"

[[bin]]
name = "abc406_a"
path = "./src/abc/406/a.rs"

[[bin]]
name = "abc406_b"
path = "./src/abc/406/b.rs"

[[bin]]
name = "abc406_c"
path = "./src/abc/406/c.rs"

[[bin]]
name = "abc406_d"
path = "./src/abc/406/d.rs"

[[bin]]
name = "abc406_e"
path = "./src/abc/406/e.rs"

[[bin]]
name = "abc406_f"
path = "./src/abc/406/f.rs"

[[bin]]
name = "abc406_g"
path = "./src/abc/406/g.rs"

[[bin]]
name = "abc437_a"
path = "./src/abc/437/a.rs"

[[bin]]
name = "abc437_b"
path = "./src/abc/437/b.rs"

[[bin]]
name = "abc437_c"
path = "./src/abc/437/c.rs"

[[bin]]
name = "abc437_d"
path = "./src/abc/437/d.rs"

[[bin]]
name = "abc437_e"
path = "./src/abc/437/e.rs"

[[bin]]
name = "abc437_f"
path = "./src/abc/437/f.rs"

[[bin]]
name = "abc437_g"
path = "./src/abc/437/g.rs"

[[bin]]
name = "arc196_a"
path = "./src/arc/196/a.rs"

[[bin]]
name = "arc196_b"
path = "./src/arc/196/b.rs"

[[bin]]
name = "arc196_c"
path = "./src/arc/196/c.rs"

[[bin]]
name = "arc196_d"
path = "./src/arc/196/d.rs"

[[bin]]
name = "arc196_e"
path = "./src/arc/196/e.rs"

[[bin]]
name = "arc196_f"
path = "./src/arc/196/f.rs"

[[bin]]
name = "arc196_g"
path = "./src/arc/196/g.rs"

[[bin]]
name = "arc197_a"
path = "./src/arc/197/a.rs"

[[bin]]
name = "arc197_b"
path = "./src/arc/197/b.rs"

[[bin]]
name = "arc197_c"
path = "./src/arc/197/c.rs"

[[bin]]
name = "arc197_d"
path = "./src/arc/197/d.rs"

[[bin]]
name = "arc197_e"
path = "./src/arc/197/e.rs"

[[bin]]
name = "arc197_f"
path = "./src/arc/197/f.rs"

[[bin]]
name = "arc197_g"
path = "./src/arc/197/g.rs"

[[bin]]
name = "arc198_a"
path = "./src/arc/198/a.rs"

[[bin]]
name = "arc198_b"
path = "./src/arc/198/b.rs"

[[bin]]
name = "arc198_c"
path = "./src/arc/198/c.rs"

[[bin]]
name = "arc198_d"
path = "./src/arc/198/d.rs"

[[bin]]
name = "arc198_e"
path = "./src/arc/198/e.rs"

[[bin]]
name = "arc198_f"
path = "./src/arc/198/f.rs"

[[bin]]
name = "arc198_g"
path = "./src/arc/198/g.rs"

[[bin]]
name = "abc405_a"
path = "./src/abc/405/a.rs"

[[bin]]
name = "abc405_b"
path = "./src/abc/405/b.rs"

[[bin]]
name = "abc405_c"
path = "./src/abc/405/c.rs"

[[bin]]
name = "abc405_d"
path = "./src/abc/405/d.rs"

[[bin]]
name = "abc405_e"
path = "./src/abc/405/e.rs"

[[bin]]
name = "abc405_f"
path = "./src/abc/405/f.rs"

[[bin]]
name = "abc405_g"
path = "./src/abc/405/g.rs"

[[bin]]
name = "abc404_a"
path = "./src/abc/404/a.rs"

[[bin]]
name = "abc404_b"
path = "./src/abc/404/b.rs"

[[bin]]
name = "abc404_c"
path = "./src/abc/404/c.rs"

[[bin]]
name = "abc404_d"
path = "./src/abc/404/d.rs"

[[bin]]
name = "abc404_e"
path = "./src/abc/404/e.rs"

[[bin]]
name = "abc404_f"
path = "./src/abc/404/f.rs"

[[bin]]
name = "abc404_g"
path = "./src/abc/404/g.rs"

[[bin]]
name = "abc403_a"
path = "./src/abc/403/a.rs"

[[bin]]
name = "abc403_b"
path = "./src/abc/403/b.rs"

[[bin]]
name = "abc403_c"
path = "./src/abc/403/c.rs"

[[bin]]
name = "abc403_d"
path = "./src/abc/403/d.rs"

[[bin]]
name = "abc403_e"
path = "./src/abc/403/e.rs"

[[bin]]
name = "abc403_f"
path = "./src/abc/403/f.rs"

[[bin]]
name = "abc403_g"
path = "./src/abc/403/g.rs"

[[bin]]
name = "abc438_a"
path = "./src/abc/438/a.rs"

[[bin]]
name = "abc438_b"
path = "./src/abc/438/b.rs"

[[bin]]
name = "abc438_c"
path = "./src/abc/438/c.rs"

[[bin]]
name = "abc438_d"
path = "./src/abc/438/d.rs"

[[bin]]
name = "abc438_e"
path = "./src/abc/438/e.rs"

[[bin]]
name = "abc438_f"
path = "./src/abc/438/f.rs"

[[bin]]
name = "abc438_g"
path = "./src/abc/438/g.rs"

[[bin]]
name = "abc430_a"
path = "./src/abc/430/a.rs"

[[bin]]
name = "abc430_b"
path = "./src/abc/430/b.rs"

[[bin]]
name = "abc430_c"
path = "./src/abc/430/c.rs"

[[bin]]
name = "abc430_d"
path = "./src/abc/430/d.rs"

[[bin]]
name = "abc430_e"
path = "./src/abc/430/e.rs"

[[bin]]
name = "abc430_f"
path = "./src/abc/430/f.rs"

[[bin]]
name = "abc430_g"
path = "./src/abc/430/g.rs"

[[bin]]
name = "abc402_a"
path = "./src/abc/402/a.rs"

[[bin]]
name = "abc402_b"
path = "./src/abc/402/b.rs"

[[bin]]
name = "abc402_c"
path = "./src/abc/402/c.rs"

[[bin]]
name = "abc402_d"
path = "./src/abc/402/d.rs"

[[bin]]
name = "abc402_e"
path = "./src/abc/402/e.rs"

[[bin]]
name = "abc402_f"
path = "./src/abc/402/f.rs"

[[bin]]
name = "abc402_g"
path = "./src/abc/402/g.rs"

[[bin]]
name = "401abc_a"
path = "./src/401/abc/a.rs"

[[bin]]
name = "401abc_b"
path = "./src/401/abc/b.rs"

[[bin]]
name = "401abc_c"
path = "./src/401/abc/c.rs"

[[bin]]
name = "401abc_d"
path = "./src/401/abc/d.rs"

[[bin]]
name = "401abc_e"
path = "./src/401/abc/e.rs"

[[bin]]
name = "401abc_f"
path = "./src/401/abc/f.rs"

[[bin]]
name = "401abc_g"
path = "./src/401/abc/g.rs"

[[bin]]
name = "402abc_a"
path = "./src/402/abc/a.rs"

[[bin]]
name = "402abc_b"
path = "./src/402/abc/b.rs"

[[bin]]
name = "402abc_c"
path = "./src/402/abc/c.rs"

[[bin]]
name = "402abc_d"
path = "./src/402/abc/d.rs"

[[bin]]
name = "402abc_e"
path = "./src/402/abc/e.rs"

[[bin]]
name = "402abc_f"
path = "./src/402/abc/f.rs"

[[bin]]
name = "402abc_g"
path = "./src/402/abc/g.rs"

[[bin]]
name = "abc401_a"
path = "./src/abc/401/a.rs"

[[bin]]
name = "abc401_b"
path = "./src/abc/401/b.rs"

[[bin]]
name = "abc401_c"
path = "./src/abc/401/c.rs"

[[bin]]
name = "abc401_d"
path = "./src/abc/401/d.rs"

[[bin]]
name = "abc401_e"
path = "./src/abc/401/e.rs"

[[bin]]
name = "abc401_f"
path = "./src/abc/401/f.rs"

[[bin]]
name = "abc401_g"
path = "./src/abc/401/g.rs"

[[bin]]
name = "abc400_a"
path = "./src/abc/400/a.rs"

[[bin]]
name = "abc400_b"
path = "./src/abc/400/b.rs"

[[bin]]
name = "abc400_c"
path = "./src/abc/400/c.rs"

[[bin]]
name = "abc400_d"
path = "./src/abc/400/d.rs"

[[bin]]
name = "abc400_e"
path = "./src/abc/400/e.rs"

[[bin]]
name = "abc400_f"
path = "./src/abc/400/f.rs"

[[bin]]
name = "abc400_g"
path = "./src/abc/400/g.rs"

[[bin]]
name = "abc439_a"
path = "./src/abc/439/a.rs"

[[bin]]
name = "abc439_b"
path = "./src/abc/439/b.rs"

[[bin]]
name = "abc439_c"
path = "./src/abc/439/c.rs"

[[bin]]
name = "abc439_d"
path = "./src/abc/439/d.rs"

[[bin]]
name = "abc439_e"
path = "./src/abc/439/e.rs"

[[bin]]
name = "abc439_f"
path = "./src/abc/439/f.rs"

[[bin]]
name = "abc439_g"
path = "./src/abc/439/g.rs"
