[package]
name = "atcoder_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { workspace = true }
itertools = { workspace = true }
superslice = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
memoise = { workspace = true }

[workspace]
members = ["src/abc/*", "src/arc/*", "src/ahc/*"]
resolver = "2"

[workspace.dependencies]
proconio = "0.5.0"
itertools = "0.15.0"
superslice = "1.0.0"
num-integer = "0.1.44"
rand = "0.10.1"
memoise = "0.3.2"
