[package]
name = "ahc064"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = { workspace = true }
itertools = { workspace = true }
superslice = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
memoise = { workspace = true }

[[bin]]
name = "a"
path = "a.rs"

[[bin]]
name = "mohan"
path = "mohan.rs"
